# aish

./: .gitignore  LICENSE  README.md  pyproject.toml  shell.py
aish/: __init__.py  __main__.py  cli.py  config.py  cron.py  history.py  intent.py  learn.py  llm.py  memory.py  scan.py  shell.py  skill.py  voice.py
aish/tools/: __init__.py  dangerous.py  files.py  misc.py  network.py  system.py
