[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aish"
version = "0.1.0"
description = "AI Shell — type natural language, run bash commands"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "rich>=13.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
]

[project.urls]
Homepage = "https://github.com/hycris/aish"

[project.scripts]
aish = "aish.cli:main"

[tool.setuptools.packages.find]
include = ["aish*"]
